--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ dependencies {
    implementation('javax.xml.bind:jaxb-api:2.3.0')
    implementation('javax.activation:activation:1.1')
    implementation('org.glassfish.jaxb:jaxb-runtime:2.3.0')
+   implementation('org.postgresql:postgresql')
 }
 
 test {
