--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,13 @@
-spring.datasource.driverClassName=org.postgresql.Driver
+
 spring.datasource.maxActive=10
 spring.datasource.maxIdle=5
 spring.datasource.minIdle=2
 spring.datasource.initialSize=5
 spring.datasource.removeAbandoned=true
+
+
+
+spring.datasource.username=aero51
+spring.datasource.password=policnik007
+spring.datasource.platform=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
