--- a/build.gradle
+++ b/build.gradle
@@ -22,8 +22,10 @@ dependencies {
 	
    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
    implementation 'com.squareup.retrofit2:converter-jaxb:2.9.0'
+   implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
    implementation 'com.squareup.okhttp3:okhttp:4.7.2'
    implementation("com.squareup.okhttp3:logging-interceptor:4.7.2")
+   
    
    implementation('javax.xml.bind:jaxb-api:2.3.0')
    implementation('javax.activation:activation:1.1')
