--- a/bin/main/application.properties
+++ b/bin/main/application.properties
@@ -8,8 +8,8 @@ spring.datasource.platform=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 
-#spring.jpa.hibernate.ddl-auto=create
-#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-#spring.datasource.username=postgres
-#spring.datasource.password=policnik007
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=policnik007
 #
