--- a/bin/main/application.properties
+++ b/bin/main/application.properties
@@ -8,7 +8,7 @@ spring.datasource.platform=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 
-#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create
 #spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 #spring.datasource.username=postgres
 #spring.datasource.password=policnik007
